--- a/coding/templates/coding/coding_base.html
+++ b/coding/templates/coding/coding_base.html
@@ -16,6 +16,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="{% static 'coding/scripts.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.min.js"></script>
 </head>
 <body>
 
@@ -23,6 +24,7 @@
         <ul>
             <li><a href=""></a>Code<ul>
                 <li><a href="{% url 'sudoku' %}">Sudoku</a></li>
+                <li><a href="{% url 'chart_test' %}">Chart</a></li>
             </ul></li>
             <li><a href=""></a>Music</li>
             <li><a href=""></a>About</li>
